# youtube

./: .gitignore  LICENSE  README.md
20240420-utf8/: untitled.py
20240504-1brc/: go.mod  main.go
20240516-battle-of-embedded-db/: README.md  cli-output.txt  main.py  requirements.txt  run.sh
20240516-battle-of-embedded-db/cases/: c_duckdb.py  c_pandas.py  c_polars.py  c_sqlite.py
20240530-prometheus-demo/: README.md  docker-compose.yml
20240530-prometheus-demo/vegeta/: payload.json  target.txt
20240613-goroutine/: README.md  go.mod  main.go  run.sh
20240621-postgres-pitr/: .gitignore  README.md  docker-compose.yml
20240621-postgres-pitr/scripts/: 01_schema.sql  02_create_schema.sh  03_data.sql  04_insert.sh  05_wal_flush.sh
20240704-elixir-pt1/: .gitignore  read_file.exs
20240705-vps-setup-ansible/: .gitignore  README.md  inventory.yaml
20240705-vps-setup-ansible/playbooks/: 00-host-setup.yaml  (+7 more)
20240720-kafka/: .gitignore  Dockerfile  docker-compose.yml  go.mod  main.go  run-consumer.sh  run-producer.sh
20240726-otel/: otel.go
20240726-race-condition/: go.mod  main.go
20240801-message-format/: capnproto_test.go  go.mod  go.sum  json_test.go  msgpack_test.go  protobuf_test.go  schema.go
20240809-cpp-data/: .gitignore  CMakeLists.txt  main.cpp
20240815-tls/: docker-compose.yml
20241004-belajar-react/: docker-compose.yaml  package-lock.json  package.json
20241101-nats/: demo.go  go.mod  main.go
20241123-olap-vs-oltp/: docker-compose.yml
20250207-go-web-framework/: go.mod  main.go
20250613-spilo-ha/: README.md  docker-compose.yml
(+46 files in other folders)
